@@ -55,6 +55,8 @@ func (r *resolver) resolve(rec PacketRecord) (err error) {
 	case *Subkey:
 		r.setSigScope(p.RFingerprint, p.signatures...)
 		p.linkSelfSigs(r.Pubkey)
+	case *Unsupported:
+		p.ScopedDigest = p.calcScopedDigest(r.Pubkey)
 	}
 	return
 }
