@@ -22,7 +22,6 @@ import (
 	"code.google.com/p/go.crypto/openpgp/packet"
 	"crypto/md5"
 	"github.com/stretchr/testify/assert"
-	"sort"
 	"strings"
 	"testing"
 )
@@ -54,22 +53,7 @@ func TestDupSig(t *testing.T) {
 	sksDigest := sksDigestOpaque(packets, md5.New())
 	assert.Equal(t, sksDigest, "6d57b48c83d6322076d634059bb3b94b")
 	key := MustInputAscKey(t, "252B8B37.dupsig.asc")
-	var packets2 []*packet.OpaquePacket
-	for opkt := range IterOpaquePackets(key) {
-		packets2 = append(packets2, opkt.OpaquePacket)
-	}
-	sort.Sort(sksPacketSorter{packets})
-	sort.Sort(sksPacketSorter{packets2})
-	t.Logf("Raw packets:")
-	for _, op := range packets {
-		t.Logf("%x", op.Contents)
-	}
-	t.Logf("Processed packets:")
-	for _, op := range packets2 {
-		t.Logf("%x", op.Contents)
-	}
-	missingPkt, err := packets[len(packets)-1].Parse()
-	t.Log(missingPkt)
+	assert.Equal(t, key.Md5, "6d57b48c83d6322076d634059bb3b94b")
 }
 
 func TestPrimaryUidSelection(t *testing.T) {
