@@ -22,7 +22,6 @@ import (
 	"code.google.com/p/go.crypto/openpgp/packet"
 	"errors"
 	"io"
-	"time"
 )
 
 var ErrInvalidPacketType error = errors.New("Invalid packet type")
@@ -87,20 +86,6 @@ type Signable interface {
 func toOpaquePacket(buf []byte) (*packet.OpaquePacket, error) {
 	r := packet.NewOpaqueReader(bytes.NewBuffer(buf))
 	return r.Next()
-}
-
-// Unsupported represents key material we receive from
-// a reconciliation peer that we cannot validate. Hockeypuck
-// will store such key material until such time it can
-// parse and interpret correctly.
-type Unsupported struct {
-	Sha256     string    `db:"uuid"`       // immutable
-	Creation   time.Time `db:"creation"`   // immutable
-	Expiration time.Time `db:"expiration"` // mutable
-	State      int       `db:"state"`      // mutable
-	Contents   []byte    `db:"contents"`   // immutable
-	Md5        string    `db:"md5"`        // immutable
-	Source     string    `db:"source"`     // immutable
 }
 
 type packetSlice []*packet.OpaquePacket
